[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jup-swap"
version = "0.1.5"
description = "Jupiter Swap Api V6 Client"
readme = "README.md"
authors = [
    { name = "Matrix.Ye", email = "initsysctrl@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests~=2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["jupiter", "solana"]

[project.urls]
Homepage = "https://github.com/MatrixYe/jup-swap"
